# VserossHachathon_2022_Foxhound

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  passwords.txt  pyproject.toml
backend/app/: __init__.py  config.py  enum.py  tasks.py  utils.py
backend/app/database/: __init__.py  article.py  article_cluster.py  base.py  cluster.py  scan.py  service.py  user.py
backend/app/database/migrations/versions/: ac8db9496055_init.py  fa4a48779f96_init.py
backend/app/routers/: __init__.py  article.py  auth.py  cluster.py  scan.py  user.py
backend/app/schemes/: __init__.py  article.py  auth.py  cluster.py  scan.py  service.py  user.py
backend/app/services/: article.py  auth.py  base.py  brute_psql.py  cluster.py  masscan.py  nmap.py  scan_service.py  scanner.py
backend/app/services/scanner/: __init__.py  base_stage.py  brute_psql.py  masscan.py  nmap.py  scanner.py
case2/: cv.ipynb  cv_optical_flow_motion_detector.ipynb
case2/python_wrapper/: exp.py
case2/quadrotor_model/: ControlSystem.h  NDSolver.cpp  NDSolver.h  Network.h  PID.h  QuadrotorDynamics.h  QuadrotorModel.cpp  TrajectoryKeeper.h
case2/unity3d_viewer/: MenuScript.cs  TxtStateReader.cs  UDPReciveScript.cs
compose/backend/: Dockerfile
datacollect/: telegram_parser.py
frontend/: package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: ClusterTable.vue  LoginForm.vue
frontend/src/http/: index.js
nlp/: nerparser.py  osint.ipynb  vseros_nlp_22.ipynb
research/: osint.ipynb
(+8 files in other folders)
